fix appContainer overflow Remove white background in navBar expand animation.

--- a/imports/ui/stylesheets/body.less
+++ b/imports/ui/stylesheets/body.less
@@ -26,11 +26,6 @@ h3 {
   border-bottom: .1rem solid lightgray;
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
-  overflow-y: auto;
-
-  &.playing {
-    overflow-y: visible;
-  }
 }
 
 .nav-overlay {
